@@ -30,7 +30,7 @@ requires:
   perl: 5.8.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Dicom-File-Detect
-  homepage: https://github.com/tupinek/Dicom-File-Detect
+  homepage: https://github.com/michal-josef-spacek/Dicom-File-Detect
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Dicom-File-Detect
+  repository: git://github.com/michal-josef-spacek/Dicom-File-Detect
 version: '0.04'
