@@ -93,7 +93,7 @@ SEE ALSO
         Install the Dicom modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Dicom-File-Detect>
+    <https://github.com/michal-josef-spacek/Dicom-File-Detect>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
