@@ -1,5 +1,6 @@
 0.04
  - Update Module::Install to 1.19 version.
+ - Update author github username.
 
 0.03 2015-10-13T23:32:55+02:00
  - Fix test.
